
  * The triple change has been reverted. Keep it in Debian bring-back-triple-linux.diff
  * Fix the "all" build
  * Disable LIBCXX_USE_COMPILER_RT on s390x, armel and x32 as it fails. See bug 52022
  * Adjust the libomp_start_tool visibility on armhf
  * Be more flexible to install libomptarget-*.bc
    (ex: libomptarget-new-nvptx-*.bc are new)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 02 Oct 2021 18:15:52 +0200

llvm-toolchain-snapshot (1:14~++20210926041028+6063e6b499c7-1~exp1) experimental; urgency=medium

  * experimental New snapshot release
  * Bring back the libc++/libc++abi options
  * Fix the libc++/libc++abi symlink issues after their moves in the triple directory

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 26 Sep 2021 16:14:44 +0200

llvm-toolchain-snapshot (1:14~++20210924122635+4a57f5d1e1c5-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * experimental New snapshot release
  * remove "scan-build-py-force-utf-8-opening.diff"
    merged upstream
  * Also install libomptarget-nvptx in libomp-X.Y-dev next to amdgcn
  * Add -DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR=OFF. it was turn on by default
    in https://reviews.llvm.org/D107799
    It was causing the second cmake (stage2) build to fail on z3 or libffi.
    Sign that the compiler didn't work correctly.
  * libcxxabi: Unbreak the CI by adding a silly symlink to _config_site
    Far from perfect but it should be fixed by the runtime move:
    https://reviews.llvm.org/D89013#3017317
  * New symbols in libomp5-14:
    - __kmpc_end_scope
    - __kmpc_scope
    - libomp_start_tool
    (and remove some old missing symbols)

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind on m68k, sparc64 and x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 24 Sep 2021 12:31:05 +0200

llvm-toolchain-snapshot (1:14~++20210924092749+e325ebb9c70b-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * experimental New snapshot release
  * remove "scan-build-py-force-utf-8-opening.diff"