@@ -130,6 +130,13 @@ ifneq (,$(findstring $(DEB_HOST_ARCH),armhf))
   CMAKE_EXTRA += -DLLVM_HOST_TRIPLE=armv7l-unknown-linux-gnueabihf
 endif
 
+ifneq (,$(filter $(DEB_HOST_ARCH),i386))
+# Sometimes, i386 needs help with the triple
+  CMAKE_EXTRA += -DLLVM_HOST_TRIPLE=i386-linux-gnu
+endif
+
+
+
 ifneq (,$(filter $(DEB_HOST_ARCH),mips64el))
 # avoid an issue with search path on mips64el
 # https://bugs.llvm.org/show_bug.cgi?id=41204
